Smårettelser, rækkefølge på menu/afsnit, tilføj nyt afsnit: Venue

--- a/css/styles.css
+++ b/css/styles.css
@@ -508,6 +508,10 @@ object {
     color: #ffffff;
 }
 
+.testimonials.venue{
+     background: url(../images/bg-4.jpg) no-repeat center fixed;
+}
+
 .testimonials .color-overlay {
     padding-top: 110px;
     padding-bottom: 110px;
@@ -808,5 +812,5 @@ footer .copyright {
 
 #map {
     width: 100%;
-    height: 500px;
+    height: 450px;
 }
