BG fix på venue. Læsebredde på “plan”

--- a/css/styles.css
+++ b/css/styles.css
@@ -508,8 +508,10 @@ object {
     color: #ffffff;
 }
 
-.testimonials.venue{
-     background: url(../images/bg-4.jpg) no-repeat center fixed;
+#venue{
+    background: url(../images/bg-4.jpg) no-repeat center fixed;
+    -webkit-background-size: cover;
+            background-size: cover;
 }
 
 .testimonials .color-overlay {
