--- a/css/responsive.css
+++ b/css/responsive.css
@@ -202,6 +202,10 @@ RESPONSIVE FIXES
         -moz-background-clip: padding;
         background-clip: padding-box;
     }
+    .features .phone-image {
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
 }
 
 @media (max-width: 320px) {
