--- a/css/styles.css
+++ b/css/styles.css
@@ -417,6 +417,7 @@ header .intro-section .buttons {
     max-width: 250px;
     margin: auto;
     margin-bottom: 80px;
+    margin-top: 100px;
 }
 
 .features .phone-image img {
